Code for listGP() cleaned.